--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -17,7 +17,7 @@ a {
 .characters {
     margin-top: 3rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 30rem));
     gap: 2rem;
     justify-content: center;
 }
@@ -25,7 +25,31 @@ a {
     margin: 1rem 0;
     font-size: 2rem;
     color: black;
+    text-align: center;
 }
 .character__image {
     border-radius: 1rem;
+}
+.character-card {
+    display: flex;
+    gap: 2rem;
+    margin: 2rem 0;
+}
+.character-card__image img {
+    margin-bottom: 2rem;
+}
+.character-card__image h2 {
+    font-size: 2.2rem;
+    text-align: center;
+}
+.character-card__description {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.character-card__description p {
+    font-size: 2rem;
+}
+.character-card__description p span{
+    font-weight: bold;
 }
