--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -14,6 +14,12 @@ a {
     width: 80%;
     margin: 0 auto;
 }
+.header {
+    height: 8rem;
+}
+.logo {
+    width: 100%;
+}
 .characters {
     margin-top: 3rem;
     display: grid;
