--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,15 +10,25 @@ html {
 a {
     text-decoration: none;
 }
+:root {
+    --black: #001C20;
+    --light-blue: #f1f1f1;
+}
+body {
+    background-color: var(--light-blue);
+}
 .main {
     width: 80%;
     margin: 0 auto;
 }
 .header {
-    height: 8rem;
+    height: 19rem;
+    width: 41.2rem;
+    margin: 0 auto;
 }
 .logo {
     width: 100%;
+    height: 100%;
 }
 .characters {
     margin-top: 3rem;
@@ -30,7 +40,7 @@ a {
 .character__title {
     margin: 1rem 0;
     font-size: 2rem;
-    color: black;
+    color: var(--black);
     text-align: center;
 }
 .character__image {
