[ADD] - Animation.css has been added and the character card has been animated

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -90,3 +90,6 @@ body {
 .character-card__description p span{
     font-weight: bold;
 }
+.animate__animated.animate__slideInDown {
+    --animate-duration: 2s;
+}
